--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^9.0|^10.0|^11.0"
     },
     "extra": {
         "laravel": {
